--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -23,7 +23,7 @@ input {
 }
 
 .log-in, .log-out, .register {
-  background-color: #00acb0;
+  background-color: #FB9E24;
   border-radius: 4px;
   color: #f8f8f8;
   min-height: 50px;
@@ -33,7 +33,7 @@ input {
 }
 
 .log-in:hover, .log-out:hover, .register:hover {
-  background-color: #008183;
+  background-color: #FB9E24;
 }
 
 /* This line makes the "Register" and "Login" buttons look like links */
