--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -8,13 +8,13 @@
 
 .nav {
   overflow: hidden;
-  background-color: #00acb0;
+  background-color: #FB9E24;
 }
 
 .nav-link {
   float: left;
   color: #f2f2f2;
-  background-color: #00acb0;
+  background-color: #FB9E24;
   text-align: center;
   padding: 24px 10px;
   text-decoration: none;
@@ -28,7 +28,7 @@
 }
 
 .nav-link:hover {
-  background-color: #008183;
+  background-color:#FB9E24;
 }
 
 .nav-right {
