completed get route for recent route

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -25,7 +25,7 @@ input {
 .log-in, .log-out, .register {
   background-color: #FB9E24;
   border-radius: 4px;
-  color: #f8f8f8;
+  color:black;
   min-height: 50px;
   min-width: 100px;
   outline:0;
