--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,5 +1,5 @@
 .nav-title {
-    font-size: 26px;
+    font-size: 24px;
     font-weight: 700;
     display:inline-block;
     color: black;
@@ -28,7 +28,7 @@
 }
 
 .nav-link:hover {
-  background-color:orange;
+  background-color:rgb(255, 111, 0);
 }
 
 .nav-right {
